[package]
name = "poker_phh"
version = "0.1.0"
edition = "2024"
description = "A comprehensive Rust library for parsing and representing poker hand histories in the PHH (Poker Hand History) TOML-based format. Supports 11 poker variants with flexible data models for game states, actions, and player information."
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1"
toml = "1"
time = "0.3"
